lib_LTLIBRARIES = libcanoncapt.la

libcanoncapt_la_SOURCES = \
	opvp.h\
	opvp_02.h\
	opvp_rpc_client.c\
	opvp_rpc_client_02.c\
	opvp_rpc_client.h\
	opvp_rpc_client_02.h\
	opvp_rpc_core.c\
	opvp_rpc_core.h\
	opvp_rpc_reqno.h\
	opvp_rpc_reqno_02.h

libcanoncapt_la_LDFLAGS = -shared -version-info 1:0:0

AM_CFLAGS = -Wall -fPIC -O2
