AC_INIT(opvp_rpc_core.c)
AM_INIT_AUTOMAKE(libcanoncapt, 1.0.0, no-defile)
AM_CONFIG_HEADER(config.h)

AC_ARG_ENABLE(progpath)
AC_DEFINE_UNQUOTED(PROG_PATH, "$enable_progpath")
AC_SUBST(PROG_PATH)

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AC_PROG_MAKE_SET
AM_PROG_LIBTOOL

# Checks for libraries.

# Checks for header files.
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(fcntl.h sys/time.h unistd.h)

# Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_PID_T

# Checks for library functions.
AC_FUNC_VPRINTF

# AC_CONFIG_FILES([Makefile])
AC_OUTPUT([Makefile])
