ppddir = $(datadir)/cups/model

ppd_DATA = \
	CNCUPSLBP1120CAPTJ.ppd\
	CNCUPSLBP1120CAPTK.ppd\
	CNCUPSLBP1210CAPTJ.ppd\
	CNCUPSLBP1210CAPTK.ppd\
	CNCUPSLBP2900CAPTK.ppd\
	CNCUPSLBP3000CAPTJ.ppd\
	CNCUPSLBP3000CAPTK.ppd\
	CNCUPSLBP3200CAPTJ.ppd\
	CNCUPSLBP3200CAPTK.ppd\
	CNCUPSLBP3210CAPTJ.ppd\
	CNCUPSLBP3210CAPTK.ppd\
	CNCUPSLBP3300CAPTJ.ppd\
	CNCUPSLBP3300CAPTK.ppd\
	CNCUPSLBP3310CAPTJ.ppd\
	CNCUPSLBP3310CAPTK.ppd\
	CNCUPSLBP3500CAPTJ.ppd\
	CNCUPSLBP3500CAPTK.ppd\
	CNCUPSLBP3600CAPTJ.ppd\
	CNCUPSLBP5000CAPTJ.ppd\
	CNCUPSLBP5000CAPTK.ppd\
	CNCUPSLBP5100CAPTJ.ppd\
	CNCUPSLBP5100CAPTK.ppd\
	CNCUPSLBP5300CAPTJ.ppd\
	CNCUPSLBP5300CAPTK.ppd\
	CNCUPSLBP3250CAPTK.ppd\
	CNCUPSLBP3050CAPTK.ppd\
	CNCUPSLBP3100CAPTJ.ppd\
	CNCUPSLBP3150CAPTK.ppd\
	CNCUPSLBP5050CAPTJ.ppd\
	CNCUPSLBP5050CAPTK.ppd\
	CNCUPSLBP7200CCAPTJ.ppd\
	CNCUPSLBP7200CCAPTK.ppd\
	CNCUPSLBP6300CAPTJ.ppd\
	CNCUPSLBP6300CAPTK.ppd\
	CNCUPSLBP9100CCAPTJ.ppd\
	CNCUPSLBP9100CCAPTK.ppd\
	CNCUPSLBP6018CAPTK.ppd\
	CNCUPSLBP7200CCAPTS.ppd\
	CNCUPSLBP6300CAPTS.ppd\
	CNCUPSLBP6018CAPTS.ppd\
	CNCUPSLBP6200CAPTJ.ppd\
	CNCUPSLBP6200CAPTK.ppd\
	CNCUPSLBP6200CAPTS.ppd\
	CNCUPSLBP7010CCAPTJ.ppd\
	CNCUPSLBP7018CCAPTK.ppd\
	CNCUPSLBP6300nCAPTK.ppd\
	CNCUPSLBP9200CCAPTJ.ppd\
	CNCUPSLBP9200CCAPTK.ppd\
	CNCUPSLBP6020CAPTK.ppd\
	CNCUPSLBP6310CAPTK.ppd\
	CNCUPSLBP6340CAPTJ.ppd\
	CNCUPSLBP7210CCAPTK.ppd

