confdir = /usr/share/cngplp

conf_DATA = \
	cngplp_capt.glade\
	func_config_capt.xml\
	common_capt.res\
	CNL112CJ.res\
        CNL112CK.res\
        CNL121CJ.res\
        CNL121CK.res\
        CNL290CK.res\
        CNL300CJ.res\
        CNL300CK.res\
        CNL320CJ.res\
        CNL320CK.res\
        CNL321CJ.res\
        CNL321CK.res\
        CNL330CJ.res\
        CNL330CK.res\
        CNL331CJ.res\
        CNL331CK.res\
        CNL350CJ.res\
        CNL350CK.res\
        CNL360CJ.res\
        CNL500CJ.res\
        CNL500CK.res\
        CNL510CJ.res\
        CNL510CK.res\
        CNL530AJ.res\
        CNL530AK.res\
        CNL325CK.res\
        CNL315CK.res\
        CNL305CK.res\
        CNL310CJ.res\
        CNL505CK.res\
        CNL505CJ.res\
        CNL720CK.res\
        CNL720CJ.res\
        CNL910CJ.res\
        CNL910CK.res\
        CNL630CJ.res\
        CNL630CK.res\
        CNL618CK.res\
        CNL720CS.res\
        CNL630CS.res\
        CNL618CS.res\
        CNL620CJ.res\
        CNL620CK.res\
        CNL620CS.res\
        CNL701CJ.res\
        CNL701CK.res\
	 CNL63nCK.res\
	 CNL920CJ.res\
	 CNL920CK.res\
	 CNL602CK.res\
	 CNL631CK.res\
	 CNL634CJ.res\
	 CNL721CK.res

